# wizzMania

./: .env.template  .gitignore  .gitmodules  Dockerfile.client  Dockerfile.server  Dockerfile.server.release  README.md  docker-compose.release.yml  docker-compose.yml  graph.md  init.sql  test.md
.github/workflows/: release.yml
client/: CMakeLists.txt  build-client.bat  build-client.sh  client.cpp  client.pro  run-client.sh  settings.ini
client/Forms/: login_widget.ui  loginwidget.ui  mainwindow.ui
client/Headers/: login_widget.hpp  loginwidget.h  loginwidget.hpp  mainwindow.h  mainwindow.hpp  message_json.h  message_json.hpp  message_qt_types.h  message_qt_types.hpp  serverconfig.h  serverconfig.hpp  websocket_client.h  websocket_client.hpp
client/Headers/models/: channel_model.hpp  incoming_invitation_model.hpp  message_model.hpp  outgoing_invitation_model.hpp
client/Headers/services/: api_client.hpp  apiclient.hpp  auth_manager.hpp  authmanager.hpp  channel_service.hpp  invitation_service.hpp  request_service.hpp  server_config.hpp  user_controller.hpp
client/Headers/utils/: display.hpp  message_json.hpp  message_qt_types.hpp  path_utils.hpp
client/Headers/widgets/: channel_panel_widget.hpp  channel_row_widget.hpp  channelpanelwidget.hpp  create_channel_widget.hpp  incoming_invitation_item_widget.hpp  invitation_widget.hpp  login_widget.hpp  message_item_widget.hpp  outgoing_invitation_item_widget.hpp  register_widget.hpp  right_panel_widget.hpp  user_home_widget.hpp
client/Headers/ws/: websocket_client.hpp
client/Sources/: client.cpp  login_widget.cpp  loginwidget.cpp  mainwindow.cpp  message_json.cpp  serverconfig.cpp  websocket_client.cpp
client/Sources/models/: channel_model.cpp  channelmodel.cpp  incoming_invitation_model.cpp  message_model.cpp  messagemodel.cpp  outgoing_invitation_model.cpp
client/Sources/services/: api_client.cpp  apiclient.cpp  auth_manager.cpp  authmanager.cpp  channel_service.cpp  invitation_service.cpp  request_service.cpp  server_config.cpp  serverconfig.cpp  user_controller.cpp
client/Sources/utils/: display.cpp  message_json.cpp  path_utils.cpp
client/Sources/widgets/: channel_panel_widget.cpp  channel_row_widget.cpp  channelpanelwidget.cpp  channelrowwidget.cpp  create_channel_widget.cpp  incoming_invitation_item_widget.cpp  invitation_widget.cpp  login_widget.cpp  message_item_widget.cpp  messageitemwidget.cpp  outgoing_invitation_item_widget.cpp  register_widget.cpp  right_panel_widget.cpp  rightpanelwidget.cpp  user_home_widget.cpp
client/Sources/ws/: websocket_client.cpp
client/_documentation/: architecture.md  data_flow.md
client/resources/: app.qss
common/: client_exception.hpp  message_structure.hpp  messages.hpp  utils.cpp  utils.hpp
conception/: FrontEndDraft.md  client_diagram.html  init.sql
docs/: ancienReadme.md  backendFrontEnd_api.md  backend_API.md  client_architecture.drawio  docker_command_sheets.md  server_architecture.drawio
server/: CMakeLists.txt  build-server.sh  server-crow.cpp  server.cpp
server/draft/: server-beast.cpp  server-crow.cpp
server/headers/: auth.hpp  channel_controller.hpp  channel_service.hpp  database.hpp  exception.hpp  helpers.hpp  http_manager.hpp  idatabase.hpp  initialization_controller.hpp  invitation_controller.hpp  iwebsocket_manager.hpp  json_helpers.hpp  message_controller.hpp  message_handler.hpp  message_service.hpp  server.hpp  user_controller.hpp  user_service.hpp  websocket_manager.cpp  websocket_manager.hpp
server/headers/auth/: auth_controller.hpp  auth_service.hpp
server/headers/channel/: channel_controller.hpp  channel_service.hpp
server/headers/invitation/: invitation_controller.hpp  invitation_service.hpp
server/headers/message/: message_controller.hpp  message_service.hpp
server/headers/user/: user_controller.hpp  user_service.hpp
server/sources/: auth.cpp  channel_controller.cpp  database.cpp  database_channels.cpp  database_messages.cpp  helpers.cpp  http_manager.cpp  initialization_controller.cpp  invitation_controller.cpp  message_controller.cpp  message_handler.cpp  message_service.cpp  server.cpp  user_controller.cpp  user_service.cpp  websocket_manager.cpp
server/sources/auth/: auth_controller.cpp  auth_service.cpp
server/sources/channel/: channel_controller.cpp  channel_service.cpp
server/sources/database/: database.cpp  database_channels.cpp  database_core.cpp  database_invitations.cpp  database_messages.cpp  database_users.cpp
server/sources/invitation/: invitation_controller.cpp  invitation_service.cpp
server/sources/message/: message_controller.cpp  message_service.cpp
server/sources/user/: user_controller.cpp  user_service.cpp
tests/draft/: index.html  index.js  server.cpp
tests/server/: mock_websocket_manager.hpp  test_password_helpers.cpp
tests/server/auth/: test_auth_service.cpp
tests/server/common/: test_utils.cpp
tests/server/database/: mock_database.hpp
tests/server/message/: test_message_controller.cpp
tests/server/user/: test_user_service.cpp
tests/web_client/: index.html  index.js
